# gridwatch-au

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  daily-refresh.yml
dashboard/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
dashboard/client/: index.html
dashboard/client/src/: App.tsx  index.css
dashboard/docs/: materialize-integration.md
dashboard/scripts/: backfill.py  materialize.py  refresh.sh  requirements.txt
dashboard/server/: routes.ts
dashboard/shared/: schema.ts
data/views/: last_updated.json  monthly.json  raw_recent.json  summary.json  weekly.json  yearly.json
docs/: CHANGELOG.md
docs/architecture/: system-architecture.md
docs/architecture/decisions/: ADR-001-ports-and-adapters.md  ADR-002-data-source-openelectricity.md  ADR-003-reading-spine.md  ADR-004-file-persistence.md  ADR-005-scope-nem-only.md  ADR-006-sqlite-repository.md  (+2 more)
docs/prd/: 00-gridwatch-prd.md
scripts/: backfill.py  requirements.txt
src/gridwatch/: cli.py  exceptions.py
tests/: test_aggregate.py  test_analytics.py  test_bulk_fetch.py  test_cli.py  test_exceptions.py  test_fake_source.py  test_fueltech.py  test_ingest.py  test_ledger.py  test_manager.py  test_openelectricity.py  test_ports.py  test_query.py  test_readings.py  test_region.py  test_repositories.py  test_smoke.py  test_sqlite_repo.py  test_trends.py  test_viz.py  test_viz_more.py  test_web.py
tests/fixtures/: nem_sa1_power_7d.json
tools/: check_decision_hygiene.py
(+43 files in other folders)
