[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gridwatch-au"
version = "0.1.0"
description = "A management system for Australian NEM electricity generation & emissions (UN SDG 7/13)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "matplotlib>=3.8",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[project.scripts]
gridwatch = "gridwatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that are slower / hit larger fixtures (deselect with -m 'not slow')",
    "network: tests that require live network access (deselected by default in CI)",
]
addopts = "-q"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
